[package]
name = "hackernews_rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21.3", features = ["wgpu"] }
ehttp = "0.2.0"
poll-promise = "0.2.0"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
url = "~2.3"

[profile.dev.package."*"]
opt-level = 3
